--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource/inter": "^4.5.15",
     "@fontsource/open-sans": "^4.5.14",
+    "@vercel/analytics": "^0.1.11",
     "daisyui": "^2.51.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
